--- a/templates/modal.html
+++ b/templates/modal.html
@@ -4,12 +4,54 @@
         <h2>Article Details</h2>
         <form id="classifyForm">
             <input type="hidden" id="articleId" name="article_id">
-            <label for="status">Status:</label>
-            <select id="status" name="status">
-                <option value="No relevante">No relevante</option>
-                <option value="Relevante">Relevante</option>
-                <option value="Reportable">Reportable</option>
-            </select>
+            <div>
+                <label for="articleSourceId">Article Source ID:</label>
+                <input type="text" id="articleSourceId" name="articleSourceId" readonly>
+            </div>
+            <div>
+                <label for="sourceUrl">Source URL:</label>
+                <input type="text" id="sourceUrl" name="sourceUrl" readonly>
+            </div>
+            <div>
+                <label for="title">Title:</label>
+                <input type="text" id="title" name="title" readonly>
+            </div>
+            <div>
+                <label for="englishAbstract">English Abstract:</label>
+                <textarea id="englishAbstract" name="englishAbstract" readonly></textarea>
+            </div>
+            <div>
+                <label for="spanishAbstract">Spanish Abstract:</label>
+                <textarea id="spanishAbstract" name="spanishAbstract" readonly></textarea>
+            </div>
+            <div>
+                <label for="portugueseAbstract">Portuguese Abstract:</label>
+                <textarea id="portugueseAbstract" name="portugueseAbstract" readonly></textarea>
+            </div>
+            <div>
+                <label for="owner">Owner:</label>
+                <input type="text" id="owner" name="owner" readonly>
+            </div>
+            <div>
+                <label for="pais">País:</label>
+                <input type="text" id="pais" name="pais" readonly>
+            </div>
+            <div>
+                <label for="producto">Producto:</label>
+                <input type="text" id="producto" name="producto" readonly>
+            </div>
+            <div>
+                <label for="dateOfHit">Date of Hit:</label>
+                <input type="date" id="dateOfHit" name="dateOfHit" readonly>
+            </div>
+            <div>
+                <label for="status">Status:</label>
+                <select id="status" name="status">
+                    <option value="No relevante">No relevante</option>
+                    <option value="Relevante">Relevante</option>
+                    <option value="Reportable">Reportable</option>
+                </select>
+            </div>
             <button type="submit">Update</button>
         </form>
     </div>
