--- a/templates/modal.html
+++ b/templates/modal.html
@@ -10,7 +10,7 @@
             </div>
             <div>
                 <label for="sourceUrl">Source URL:</label>
-                <input type="text" id="sourceUrl" name="sourceUrl" readonly>
+                <a id="sourceUrl" href="#" target="_blank">View Source</a>
             </div>
             <div>
                 <label for="title">Title:</label>
