Agent query: Can you verify if the default status for new articles is now 'No clasificado' and if the changes are reflected correctly in the user interface?

--- a/templates/index.html
+++ b/templates/index.html
@@ -106,7 +106,7 @@
     </thead>
     <tbody>
         {% for article in articles %}
-        <tr data-id="{{ article.id }}" class="{% if article.status == 'No clasificado' or article.status == 'No relevante' %}bold{% elif article.status == 'Relevante' %}relevante{% elif article.status == 'Reportable' %}reportable{% endif %}">
+        <tr data-id="{{ article.id }}" class="{% if article.status == 'No clasificado' %}bold{% elif article.status == 'Relevante' %}relevante{% elif article.status == 'Reportable' %}reportable{% endif %}">
             <td>{{ article.owner }}</td>
             <td>{{ article.pais }}</td>
             <td>{{ article.producto }}</td>
