--- a/templates/modal.html
+++ b/templates/modal.html
@@ -4,47 +4,47 @@
         <h2>Article Details</h2>
         <form id="classifyForm">
             <input type="hidden" id="articleId" name="article_id">
-            <div>
+            <div class="form-group">
                 <label for="articleSourceId">Article Source ID:</label>
                 <input type="text" id="articleSourceId" name="articleSourceId" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="sourceUrl">Source URL:</label>
                 <a id="sourceUrl" href="#" target="_blank">View Source</a>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="title">Title:</label>
                 <input type="text" id="title" name="title" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="englishAbstract">English Abstract:</label>
                 <textarea id="englishAbstract" name="englishAbstract" readonly></textarea>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="spanishAbstract">Spanish Abstract:</label>
                 <textarea id="spanishAbstract" name="spanishAbstract" readonly></textarea>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="portugueseAbstract">Portuguese Abstract:</label>
                 <textarea id="portugueseAbstract" name="portugueseAbstract" readonly></textarea>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="owner">Owner:</label>
                 <input type="text" id="owner" name="owner" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="pais">País:</label>
                 <input type="text" id="pais" name="pais" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="producto">Producto:</label>
                 <input type="text" id="producto" name="producto" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="dateOfHit">Date of Hit:</label>
                 <input type="date" id="dateOfHit" name="dateOfHit" readonly>
             </div>
-            <div>
+            <div class="form-group">
                 <label for="status">Status:</label>
                 <select id="status" name="status">
                     <option value="No relevante">No relevante</option>
