Agent query: Please open the modal for an article and verify if all fields (except the status dropdown) are now displayed as labels instead of input fields. Also, check if the classification functionality is still working correctly.

--- a/templates/modal.html
+++ b/templates/modal.html
@@ -6,7 +6,7 @@
             <input type="hidden" id="articleId" name="article_id">
             <div class="form-group">
                 <label for="articleSourceId">Article Source ID:</label>
-                <input type="text" id="articleSourceId" name="articleSourceId" readonly>
+                <label id="articleSourceId"></label>
             </div>
             <div class="form-group">
                 <label for="sourceUrl">Source URL:</label>
@@ -14,35 +14,35 @@
             </div>
             <div class="form-group">
                 <label for="title">Title:</label>
-                <input type="text" id="title" name="title" readonly>
+                <label id="title"></label>
             </div>
             <div class="form-group">
                 <label for="englishAbstract">English Abstract:</label>
-                <textarea id="englishAbstract" name="englishAbstract" readonly></textarea>
+                <label id="englishAbstract"></label>
             </div>
             <div class="form-group">
                 <label for="spanishAbstract">Spanish Abstract:</label>
-                <textarea id="spanishAbstract" name="spanishAbstract" readonly></textarea>
+                <label id="spanishAbstract"></label>
             </div>
             <div class="form-group">
                 <label for="portugueseAbstract">Portuguese Abstract:</label>
-                <textarea id="portugueseAbstract" name="portugueseAbstract" readonly></textarea>
+                <label id="portugueseAbstract"></label>
             </div>
             <div class="form-group">
                 <label for="owner">Owner:</label>
-                <input type="text" id="owner" name="owner" readonly>
+                <label id="owner"></label>
             </div>
             <div class="form-group">
                 <label for="pais">País:</label>
-                <input type="text" id="pais" name="pais" readonly>
+                <label id="pais"></label>
             </div>
             <div class="form-group">
                 <label for="producto">Producto:</label>
-                <input type="text" id="producto" name="producto" readonly>
+                <label id="producto"></label>
             </div>
             <div class="form-group">
                 <label for="dateOfHit">Date of Hit:</label>
-                <input type="date" id="dateOfHit" name="dateOfHit" readonly>
+                <label id="dateOfHit"></label>
             </div>
             <div class="form-group">
                 <label for="status">Status:</label>
