Agent query: Please open the classification modal for an article and check the browser's console log. Are the 'owner' and 'país' fields being correctly logged? Also, verify if these fields are now displayed correctly in the modal.

--- a/templates/modal.html
+++ b/templates/modal.html
@@ -6,7 +6,7 @@
             <input type="hidden" id="articleId" name="article_id">
             <div class="form-group">
                 <label for="articleSourceId">Article Source ID:</label>
-                <label id="articleSourceId"></label>
+                <span id="articleSourceId"></span>
             </div>
             <div class="form-group">
                 <label for="sourceUrl">Source URL:</label>
@@ -14,35 +14,35 @@
             </div>
             <div class="form-group">
                 <label for="title">Title:</label>
-                <label id="title"></label>
+                <span id="title"></span>
             </div>
             <div class="form-group">
                 <label for="englishAbstract">English Abstract:</label>
-                <label id="englishAbstract"></label>
+                <span id="englishAbstract"></span>
             </div>
             <div class="form-group">
                 <label for="spanishAbstract">Spanish Abstract:</label>
-                <label id="spanishAbstract"></label>
+                <span id="spanishAbstract"></span>
             </div>
             <div class="form-group">
                 <label for="portugueseAbstract">Portuguese Abstract:</label>
-                <label id="portugueseAbstract"></label>
+                <span id="portugueseAbstract"></span>
             </div>
             <div class="form-group">
                 <label for="owner">Owner:</label>
-                <label id="owner"></label>
+                <span id="owner"></span>
             </div>
             <div class="form-group">
                 <label for="pais">País:</label>
-                <label id="pais"></label>
+                <span id="pais"></span>
             </div>
             <div class="form-group">
                 <label for="producto">Producto:</label>
-                <label id="producto"></label>
+                <span id="producto"></span>
             </div>
             <div class="form-group">
                 <label for="dateOfHit">Date of Hit:</label>
-                <label id="dateOfHit"></label>
+                <span id="dateOfHit"></span>
             </div>
             <div class="form-group">
                 <label for="status">Status:</label>
